--- a/assets/pago/css/style1.css
+++ b/assets/pago/css/style1.css
@@ -6,6 +6,7 @@
 
 body {
   overflow-x: hidden;
+  background-color: lightsteelblue;
 }
 nav th {
   margin-bottom: 20px;
@@ -28,7 +29,7 @@ nav {
 }
 
   nav .logo {
-    font-family: poppins;
+    font-family: "poppins";
     letter-spacing: 3px;
 }
 
@@ -430,7 +431,7 @@ div h1 {
   margin-bottom: 10px;
   padding: 1px;
   text-align: center;
-  font-size: 20px;
+  font-size: 22px;
 }
 
 main {
@@ -444,17 +445,17 @@ main {
 
 h1 {
   text-align: center;
-  font-family: poppins;
+  font-family: "poppins";
 }
 
 h1:hover {
-  font-family: poppins;
+  font-family: "poppins";
   font-size: 36px;
   transition: 1s;
 }
 
 h2 {
-  font-family: poppins;
+  font-family: "poppins";
   text-align: left;
   font-size: 20px;
   color: rgb(247, 149, 22);
@@ -462,21 +463,21 @@ h2 {
 
 h3 {
   color: rgb(247, 149, 22);
-  font-family: poppins;
+  font-family: "poppins";
 }
 h4 {
   font-size: 30px;
   text-align: center;
-  font-family: poppins;
+  font-family: "poppins";
 }
 p {
   text-align: justify;
-  font-family: poppins;
+  font-family: "poppins";
   font-size: 14px;
 }
 
 span {
-  color: rgb(255, 255, 255);
+  color: rgb(247, 174, 6);
 }
 
 div tr td {
@@ -484,7 +485,7 @@ div tr td {
 }
 
 table {
-  font-family: poppins;
+  font-family: "poppins";
   margin: auto;
   text-align: center;
 }
@@ -614,12 +615,12 @@ li,a {
 }
 
 #h2Testimoni {
-  font-family: poppins;
+  font-family: "poppins";
   text-align: left;
   font-size: 30px;
 }
 #pTesti {
-  font-family: poppins;
+  font-family: "poppins";
   font-size: 14px;
   color: rgb(255, 255, 255);
 }
@@ -637,7 +638,7 @@ li,a {
   text-align: center;
   color: grey;
   font-size: 14px;
-  font-family: poppins;
+  font-family: "poppins";
   margin-top: 10px;
 }
 
@@ -665,7 +666,7 @@ td:hover {
 a:hover {
   color: #ffd830;
   /* font-size: 20px; */
-  font-family: poppins;
+  font-family: "poppins";
 }
 
 .yt-container {
@@ -698,7 +699,7 @@ a:hover {
   z-index: 1;
 }
 .h2-yt {
-  font-family: poppins;
+  font-family: "poppins";
   text-align: center;
   font-size: 20px;
   color: #1b2e5c;
@@ -859,7 +860,7 @@ a:hover {
   color: hsl(228, 75%, 13%);
   font-size: 36px;
   font-weight: bold;
-  font-family: poppins;
+  font-family: "poppins";
   letter-spacing: 7px;
   cursor: pointer;
   text-transform: uppercase;
@@ -934,7 +935,7 @@ a:hover {
   font-size: 30px;
 }
 #pTesti {
-  font-family: poppins;
+  font-family: "poppins";
   font-size: 14px;
   color: rgb(255, 255, 255);
 }
@@ -968,18 +969,23 @@ a:hover {
 
 h1 {
   text-align: center;
-  font-family: poppins;
+  font-family: "poppins";
 }
 
 /* end visi misi */
 
+
+
+
+
 /* footer */
 footer {
   padding: 10px 50px;
-  margin-top: 50px;
+  margin-top: 0px;
   background-image: linear-gradient(#050f4a, #020716);
   background-size: 250px;
 }
+
 /* end footer */
 
 /*peta opazaky */
@@ -1003,4 +1009,132 @@ footer {
   width: 600px;
   max-width: 100%;
   max-height: 100%;
+}
+/* new card */
+
+
+
+
+/* end new card */
+/* card */
+.card-b .content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.containerr {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px 0;
+}
+.cards-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.card-b {
+  max-width: 200px;
+  height: 300px;
+  position: relative;
+  box-shadow: 0 0 15px rgba(0, 0, 0, .2);
+  margin: 10px 10px;
+  width: 20%;
+}
+
+@media screen and (max-width: 700px) {
+  .card-b {
+    width: 45%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .card-b {
+    width: 100%;
+  }
+}
+.card-b .elms-animation,
+.card-b .content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+.card-b .elms-animation {
+  z-index: 2;
+}
+.card-b .elms-animation span {
+  position: absolute;
+  background-color: rgba(0, 0, 0, .6);
+  height: 0;
+  width: 0;
+  transition: all .5s ease-out;
+}
+.card-b .elms-animation span.one {
+  top: 0; left: 0;
+}
+.card-b .elms-animation span.two {
+  top: 0; right: 0;
+}
+.card-b .elms-animation span.three {
+  left: 0; bottom: 0;
+}
+.card-b .elms-animation span.four {
+  right: 0; bottom: 0;
+}
+
+.card-b:hover .elms-animation span {
+  width: 50%;
+  height: 50%;
+}
+
+.card-b img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+}
+
+.card-b .content {
+  z-index: 3;
+  visibility: hidden;
+}
+.card-b:hover .content {
+  animation: show .3s .4s linear forwards;
+}
+.jabatan {
+  display: flexbox;
+  padding-top: 45px;
+  font-size: 14px;
+  color: #f5b402;
+  text-align: center;
+  font-family:"cursive";
+}
+.card-b .content .pc {
+  padding: .6rem 1.8rem;
+  /* border: 1px solid #FFF; */
+  /* max-width: ; */
+  /* border-radius: 70px; */
+  background: transparent;
+  color: #FFF;
+  font-size: 1rem;
+  outline: none;
+  cursor: pointer;
+  transition:  .3s ease;
+}
+.card-b .content .pc:hover {
+  /* background: #FFF; */
+  color: rgb(8, 78, 218);
+}
+
+@keyframes show {
+  to {
+    visibility: visible;
+  }
 }
